--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Assignment for Module2 Solution </title>
-<link rel="stylesheet" href="eg1.css">
+<link rel="stylesheet" href="css.css">
 </head>
 <body>
 <h1>Our Menu</h1>
